--- a/style.css
+++ b/style.css
@@ -150,3 +150,33 @@ body {
 	margin: 0;
 	display: block;
 }
+
+.uploadmodal {
+	width: 400px;
+	height: 400px;
+	background-color: #FF404F;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -200px;
+    margin-top: -200px;
+    z-index: 2000;
+    visibility: hidden;
+    opacity: 0;
+    -ms-transform: scale(0.8);
+	-webkit-transform: scale(0.8);
+	transform: scale(0.8);
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
+	transition: all 0.3s;
+}
+
+.showuploadmodal {
+	opacity: 1;
+	visibility: visible;
+	-ms-transform: scale(1);
+	-webkit-transform: scale(1);
+	transform: scale(1);
+}
