--- a/style.css
+++ b/style.css
@@ -152,14 +152,14 @@ body {
 }
 
 .uploadmodal {
-	width: 400px;
-	height: 400px;
+	width: 500px;
+	height: 500px;
 	background-color: #FF404F;
 	position: absolute;
     top: 50%;
     left: 50%;
-    margin-left: -200px;
-    margin-top: -200px;
+    margin-left: -250px;
+    margin-top: -250px;
     z-index: 2000;
     visibility: hidden;
     opacity: 0;
@@ -179,4 +179,10 @@ body {
 	-ms-transform: scale(1);
 	-webkit-transform: scale(1);
 	transform: scale(1);
+}
+
+.uploadwrap {
+	width: 580px;
+	margin: auto;
+	background: rgba(0,0,0,0.1);
 }
