--- a/style.css
+++ b/style.css
@@ -152,14 +152,14 @@ body {
 }
 
 .uploadmodal {
-	width: 500px;
-	height: 500px;
+	width: 400px;
+	height: 400px;
 	background-color: #FF404F;
 	position: absolute;
     top: 50%;
     left: 50%;
-    margin-left: -250px;
-    margin-top: -250px;
+    margin-left: -200px;
+    margin-top: -200px;
     z-index: 2000;
     visibility: hidden;
     opacity: 0;
@@ -180,9 +180,86 @@ body {
 	-webkit-transform: scale(1);
 	transform: scale(1);
 }
-
-.uploadwrap {
-	width: 580px;
+/* delete page styling AT*/
+.deletecontainer {
 	margin: auto;
+	width: 100%;
+	height: 100%;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
+	-webkit-transition: all 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  	transition: all 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.deleteimagewrap {
+	width: 75%;
+	height: 100%;
+	float: right;
+	overflow-y: scroll;
+}
+
+.deleteimage {
+	float: left;
+	width: 25%;
+	height: 50%;
+	position: relative;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
 	background: rgba(0,0,0,0.1);
 }
+
+.deleteimageedit {
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
+	cursor: pointer;
+}
+
+.deleteimageedit img {
+	opacity: 0.5;
+	padding: 0;
+	margin: 0;
+	display: block;
+}
+
+.deletedescwrap {
+	width: 25%;
+	height: 100%;
+	float: left;
+	position: relative;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
+}
+
+.deletedesc {
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
+	cursor: pointer;
+}
+
+.deletedesc img{
+	opacity: 0.5;
+	padding: 0;
+	margin: 0;
+	display: block;
+}
+.deleteoverlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    opacity: 0;
+    background: rgba(0,0,0,0.5);
+    transition: all 0.3s;
+}
+/* end delete page AT*/
