--- a/style.css
+++ b/style.css
@@ -421,3 +421,93 @@ body {
     background: rgba(0,0,0,0.5);
     transition: all 0.3s;
 }
+
+/* ADMIN PAGE STYLES */
+
+.adminoverlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    opacity: 0;
+    background: rgba(0,0,0,0.5);
+    transition: all 0.3s;
+}
+
+.showadminoverlay {
+	opacity: 1;
+    visibility: visible;
+}
+
+.admincontainer {
+	margin: auto;
+	width: 100%;
+	height: 100%;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
+	-webkit-transition: all 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  	transition: all 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.adminimagewrap {
+	width: 75%;
+	height: 100%;
+	float: right;
+	overflow-y: scroll;
+}
+
+.adminimage {
+	float: left;
+	width: 25%;
+	height: 50%;
+	position: relative;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
+	background: rgba(0,0,0,0.1);
+}
+
+.adminimageedit {
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
+	cursor: pointer;
+}
+
+.adminimageedit img {
+	opacity: 0.5;
+	padding: 0;
+	margin: 0;
+	display: block;
+}
+
+.admindescwrap {
+	width: 25%;
+	height: 100%;
+	float: left;
+	position: relative;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
+}
+
+.admindesc {
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
+	cursor: pointer;
+}
+
+.admindesc img{
+	opacity: 0.5;
+	padding: 0;
+	margin: 0;
+	display: block;
+}
