--- a/style.css
+++ b/style.css
@@ -466,6 +466,11 @@ body {
 	width: 25%;
 	height: 50%;
 	position: relative;
+	 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
 	box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
