--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
 }
 
 body {
+	font-family: "brandon-grotesque",sans-serif;
 	background-color: #0AC2D2;
 	margin: 0;
 	padding: 0;
@@ -250,9 +251,9 @@ body {
 .desccancel {
 	float: right;
 }
-#portfolio_form label, #upload_form label{
+#portfolio_form label, #img_form label{
 	display:inline-block;
-	width: 100px;
+	width: 200px;
 }
 
 /* DELETE PAGE STYLES*/
