--- a/style.css
+++ b/style.css
@@ -466,7 +466,6 @@ body {
 	width: 25%;
 	height: 50%;
 	position: relative;
-	 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
@@ -515,4 +514,10 @@ body {
 	padding: 0;
 	margin: 0;
 	display: block;
+}
+
+.imgscale {
+	max-width:100%;
+    max-height:100%;
+    vertical-align: middle;
 }
