modified positioning with css + html, modified menu

--- a/style.css
+++ b/style.css
@@ -15,51 +15,41 @@ body {
 /* MENU STYLES*/
 
 .menuwrap {
-	height: 356px;
+	background-color: #999;
+/*	height: 356px;
 	top: 50%;
-	margin-top: -178px;
+	margin-top: -178px;*/
+	width: 100%;
 	position: absolute;
+	bottom: 60;
 	z-index: 1000;
 }
 
 .menuitemwrap {
+	width: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
+    text-align: center;
 }
 
 .menuicon {
-	display: block;
+	width: 13%;
+	height: auto;
+	display: inline-block;
 	background: rgba(0,0,0,0.1);
 	cursor: pointer;
-	position: relative;
-	margin: 1px;
 	z-index: 9999;
+	margin:0;
+	padding:0;
+	border-radius: 50%;
 }
 
 .menuicon img {
-	display: block;
-	padding: 3px;
-}
-
-.menuitem {
-	overflow: hidden;
-	width: 0;
-	line-height: 70px;
-	background: rgba(0,0,0,0.1);
-	position: absolute;
-	top: 0;
-	left: 71px;
-	z-index: -1;
-}
-
-.menuitem h2 {
-	font-family: "brandon-grotesque",sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	color: #FFFFFF;
-	text-align: center;
+	display: inline-block;
+	max-width: 100%;
 	margin: 0;
+	padding: 0;
 }
 
 /* CREATE PAGE STYLES*/
@@ -136,6 +126,7 @@ body {
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
 	border: 1px solid rgba(255,255,255, 0.5);
+
 }
 
 .createdesc {
@@ -521,9 +512,10 @@ body {
 
 .admindesc {
 	position: absolute;
-	right: 20px;
-	bottom: 20px;
+	top: 20px;
 	cursor: pointer;
+	text-align: center;
+	padding: 5%;
 }
 
 .admindesc img{
