modified height on icons

--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@ body {
 /* MENU STYLES*/
 
 .menuwrap {
-	background-color: #999;
-/*	height: 356px;
-	top: 50%;
-	margin-top: -178px;*/
 	width: 100%;
 	position: absolute;
 	bottom: 60;
@@ -35,7 +31,7 @@ body {
 
 .menuicon {
 	width: 13%;
-	height: auto;
+	height: 13%;
 	display: inline-block;
 	background: rgba(0,0,0,0.1);
 	cursor: pointer;
