--- a/style.css
+++ b/style.css
@@ -132,8 +132,8 @@ body {
 
 .createdesc {
 	position: absolute;
-	right: 20px;
-	bottom: 20px;
+	right: 40px;
+	top: 20px;
 	cursor: pointer;
 }
 
@@ -500,7 +500,7 @@ body {
 	display: block;
 }
 
-.admindescwrap {
+.admindescwrap, .createdescwrap, .editdescwrap, .deletedescwrap {
 	width: 25%;
 	height: 100%;
 	float: left;
