--- a/style.css
+++ b/style.css
@@ -281,6 +281,21 @@ body {
 	background: rgba(0,0,0,0.1);
 }
 
+.deleteportfolioimage {
+	float: left;
+	width: 25%;
+	height: 50%;
+	position: relative;
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
+	background: rgba(0,0,0,0.1);
+}
 .deleteimageedit {
 	position: absolute;
 	right: 20px;
@@ -295,7 +310,7 @@ body {
 	display: block;
 }
 
-.deletedescwrap {
+.deletedescwrap, {
 	width: 25%;
 	height: 100%;
 	float: left;
@@ -308,16 +323,29 @@ body {
 
 .deletedesc {
 	position: absolute;
-	right: 20px;
-	bottom: 20px;
+	top: 20px;
 	cursor: pointer;
+	text-align: center;
+	width: 100%;
 }
-
+.deletedesc p {
+	padding: 0 5% !important;
+}
 .deletedesc img{
 	opacity: 0.5;
 	padding: 0;
 	margin: 0;
 	display: block;
+}
+.delpictureimg{
+	display: inline-block;
+	position: absolute;
+	right: 5;
+	bottom: 5;	
+	opacity: 1;
+}
+.delpictureimg:hover{
+	opacity:0.5;
 }
 .deleteoverlay {
     position: fixed;
@@ -364,6 +392,21 @@ body {
 	background: rgba(0,0,0,0.1);
 }
 
+.editportfolioimage {
+	float: left;
+	width: 25%;
+	height: 50%;
+	position: relative;
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	border: 1px solid rgba(255,255,255, 0.5);
+	background: rgba(0,0,0,0.1);
+}
 .editimageedit {
 	position: absolute;
 	right: 20px;
@@ -378,7 +421,18 @@ body {
 	display: block;
 }
 
-.editdescwrap {
+.editpictureimg{
+	display: inline-block;
+	position: absolute;
+	right: 5;
+	bottom: 5;	
+	opacity: 1;
+}
+.editpictureimg:hover{
+	opacity:0.5;
+}
+
+.editdescwrap, {
 	width: 25%;
 	height: 100%;
 	float: left;
@@ -391,17 +445,21 @@ body {
 
 .editdesc {
 	position: absolute;
-	right: 20px;
-	bottom: 20px;
+	top: 20px;
 	cursor: pointer;
+	text-align: center;
+	width: 100%;
 }
-
+.editdesc p {
+	padding: 0 5% !important;
+}
 .editdesc img{
 	opacity: 0.5;
 	padding: 0;
 	margin: 0;
 	display: block;
 }
+
 .editoverlay {
     position: fixed;
     width: 100%;
