--- a/style.css
+++ b/style.css
@@ -204,11 +204,11 @@ body {
     margin-left: -250px;
     margin-top: -250px;
     z-index: 2000;
-    visibility: hidden;
-    opacity: 0;
-    -ms-transform: scale(0.8);
-	-webkit-transform: scale(0.8);
-	transform: scale(0.8);
+    visibility: visible;
+    opacity: 1;
+    -ms-transform: scale(1);
+	-webkit-transform: scale(1);
+	transform: scale(1);
 	box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
@@ -216,12 +216,12 @@ body {
 	transition: all 0.3s;
 }
 
-.showdescmodal {
-	opacity: 1;
-	visibility: visible;
-	-ms-transform: scale(1);
-	-webkit-transform: scale(1);
-	transform: scale(1);
+.hidedescmodal {
+	opacity: 0;
+	visibility: hidden;
+	-ms-transform: scale(0.8);
+	-webkit-transform: scale(0.8);
+	transform: scale(0.8);
 }
 
 .descwrap {
