--- a/style.css
+++ b/style.css
@@ -572,7 +572,7 @@ body {
 }
 
 .admindesc {
-	background-color: white !important;
+	background-color: rgba(255,255,255, 0.9) !important;
 	position: absolute;
 	top: 20px;
 	cursor: pointer;
