--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,200,100);
 
 html {
-	background-color: #0AC2D2;
+	background-color: #000000;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
